[package]
name = "pao"
version = "0.1.0"
description = "Fast GPU-accelerated 2D renderer built on top of wgpu"
license = "MIT"
edition = "2024"

[features]
default = ["shapes"]
shapes = ["dep:lyon", "dep:bytemuck"]

[workspace]
members = [
    "examples/*",
]

[workspace.dependencies]
pao = { version = "0.1.0", path = ".", default-features = false }

[dependencies]
bytemuck = {version = "1.25.0", optional = true}
lyon = {version = "1.0.16", optional = true}
primit = { git = "https://github.com/dest-hq/primit" }
raw-window-handle = "0.6.2"
wgpu = "28.0.0"
