[package]
name = "pao"
version = "0.1.0"
description = "Fast GPU-accelerated 2D renderer built on top of wgpu"
license = "MIT"
edition = "2024"
repository = "https://github.com/dest-hq/pao"
keywords = ["graphics", "rendering", "2d", "gpu"]
categories = ["graphics", "rendering"]

[workspace]
members = [
    "examples/*",
]

[workspace.dependencies]
pao = { version = "0.1.0", path = "." }

[dependencies]
primit = "0.1"
raw-window-handle = "0.6.2"
wgpu = "28.0.0"
